--- a/Rest_APIDemo/pom.xml
+++ b/Rest_APIDemo/pom.xml
@@ -59,4 +59,42 @@
 </plugin>
 </plugins>
 </build>
+<profiles>
+<profile>
+<id>SmokeTest</id>
+<build>
+<plugins>
+<plugin>
+<groupId>org.apache.maven.plugins</groupId>
+<artifactId>maven-surefire-plugin</artifactId>
+<version>3.0.0-M5</version>
+<configuration>
+<suiteXmlFiles>
+<suiteXmlFile>testng.xml</suiteXmlFile>
+</suiteXmlFiles>
+</configuration>
+</plugin>
+</plugins>
+</build>
+</profile>
+
+<profile>
+<id>RegressionTest</id>
+<build>
+<plugins>
+<plugin>
+<groupId>org.apache.maven.plugins</groupId>
+<artifactId>maven-surefire-plugin</artifactId>
+<version>3.0.0-M5</version>
+<configuration>
+<suiteXmlFiles>
+<suiteXmlFile>run.xml</suiteXmlFile>
+</suiteXmlFiles>
+</configuration>
+</plugin>
+</plugins>
+</build>
+</profile>
+</profiles>
+
 </project>
