--- a/Rest_APIDemo/pom.xml
+++ b/Rest_APIDemo/pom.xml
@@ -88,7 +88,7 @@
 <version>3.0.0-M5</version>
 <configuration>
 <suiteXmlFiles>
-<suiteXmlFile>run.xml</suiteXmlFile>
+<suiteXmlFile>pipeline.xml</suiteXmlFile>
 </suiteXmlFiles>
 </configuration>
 </plugin>
