--- a/Rest_APIDemo/Rest_APIDemo/.project
+++ b/Rest_APIDemo/Rest_APIDemo/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Rest_Test</name>
+	<name>Rest_APIDemo</name>
 	<comment></comment>
 	<projects>
 	</projects>
